HighContrast: Fix font: usage

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1216,7 +1216,7 @@ headerbar {
   }
 
   .title {
-    font: Bold;
+    font-weight: bold;
     padding: 0px 12px;
   }
   .subtitle {
