--- a/gtk/theme/HighContrast/gtk-contained.css
+++ b/gtk/theme/HighContrast/gtk-contained.css
@@ -1291,7 +1291,7 @@ headerbar {
     box-shadow: none; }
   .titlebar .title,
   headerbar .title {
-    font: Bold;
+    font-weight: bold;
     padding: 0px 12px; }
   .titlebar .subtitle,
   headerbar .subtitle {
